# nrf-ble-driver-sys

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: connection.rs
src/: bindingsv6.rs  ffi.rs  lib.rs
