[package]
name = "nrf-ble-driver-sys"
version = "0.1.0"
authors = ["Matt Allen matt@graynode.net"]
description = "A common library for linking libnrf-ble-driver-sd_api from Nordic"
keywords = ["nrf", "pc-ble-driver", "nrf52", "nordic"]
categories = [
    "external-ffi-bindings",
    "embedded"
]
edition = "2021"
repository = "https://github.com/graynode/nrf-ble-driver-sys"
documentation = ""
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
vcpkg = "0.2"
cmake = "0.1"


[features]
default = ["sd-api-v6"]
sd-api-v6 = []